OO-8067: restrict events to a curriculum, title to link...